Added a home page, linked the project tree to home, and reformatted home page

--- a/ProjectTree.html
+++ b/ProjectTree.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahren's Projects</title>
-    <link rel="stylesheet" href="./cssfiles/styles.css" />
+    <link rel="stylesheet" href="./cssfiles/ProjectTree.css" />
   </head>
   <body>
     <div class="header">
       <h1>Check out my projects!</h1>
-      <img src="/icons/GitHubIcon.png" style="height: 60%" alt="" />
+      <a href="https://github.com/Ahrenman1">
+        <img src="/icons/GitHubIcon.png" style="height: 60px" alt="" />
+      </a>
     </div>
     <div class="container">
       <div class="banner">
         <img src="/icons/MioTagIcon.png" alt="" />
-        <p>A stroke rehabilitation platform: MioTag</p>
+        <p style="text-align: center">
+          A stroke rehabilitation platform: MioTag
+        </p>
         <img src="/icons/MioTagIcon.png" alt="" />
       </div>
       <div class="Miotag">
@@ -24,7 +28,7 @@
       </div>
       <div class="banner">
         <img src="/icons/SoundFollowerIcon.png" alt="" />
-        <p>A sound following robot</p>
+        <p style="text-align: center">A sound following robot</p>
         <img src="/icons/SoundFollowerIcon.png" alt="" />
       </div>
       <div class="SoundFollow">
@@ -34,15 +38,17 @@
       </div>
       <div class="banner">
         <img src="/icons/WifiMonitorIcon.png" alt="" />
-        <p>A Wi-Fi activity monitor</p>
+        <p style="text-align: center">A Wi-Fi activity monitor</p>
         <img src="/icons/WifiMonitorIcon.png" alt="" />
       </div>
       <div class="WifiMonitor">
-        <button class="button" type="button">Click For More Info!</button>
+        <button class="button" type="button">
+          <a href="WifiMonitor.html">Click For More Info!</a>
+        </button>
       </div>
       <div class="banner">
         <img src="/icons/MoonOrbitIcon.png" alt="" />
-        <p>Moon Orbital Constellation</p>
+        <p style="text-align: center">Moon Orbital Constellation</p>
         <img src="/icons/MoonOrbitIcon.png" alt="" />
       </div>
       <div class="MoonOrbit">
