Cleaned up pages, added new pages

--- a/ProjectTree.html
+++ b/ProjectTree.html
@@ -7,55 +7,63 @@
     <link rel="stylesheet" href="./cssfiles/ProjectTree.css" />
   </head>
   <body>
-    <div class="header">
-      <h1>Check out my projects!</h1>
-      <a href="https://github.com/Ahrenman1">
-        <img src="/icons/GitHubIcon.png" style="height: 60px" alt="" />
+    <header>
+      <a href="/HomePage.html"
+        ><button type="button">
+          <img src="/icons/BackIcon.png" alt="" /></button
+      ></a>
+      <h1>Check Out My Projects!</h1>
+      <img
+        src="/icons/GitHubIcon.png"
+        alt=""
+        style="height: 40px; width: 40px"
+      />
+    </header>
+    <div class="banner">
+      <img src="/icons/MioTagIcon.png" alt="" />
+      <p style="text-align: center">A stroke rehabilitation platform: MioTag</p>
+      <img src="/icons/MioTagIcon.png" alt="" />
+    </div>
+    <div class="Miotag">
+      <a href="MioTag.html" style="margin: auto auto">
+        <button class="button" type="button">Click For More Info!</button>
       </a>
     </div>
-    <div class="container">
-      <div class="banner">
-        <img src="/icons/MioTagIcon.png" alt="" />
-        <p style="text-align: center">
-          A stroke rehabilitation platform: MioTag
-        </p>
-        <img src="/icons/MioTagIcon.png" alt="" />
-      </div>
-      <div class="Miotag">
-        <button class="button" type="button">
-          <a href="MioTag.html">Click For More Info!</a>
-        </button>
-      </div>
-      <div class="banner">
-        <img src="/icons/SoundFollowerIcon.png" alt="" />
-        <p style="text-align: center">A sound following robot</p>
-        <img src="/icons/SoundFollowerIcon.png" alt="" />
-      </div>
-      <div class="SoundFollow">
-        <button class="button" type="button">
-          <a href="SoundFollowingRobot.html">Click For More Info!</a>
-        </button>
-      </div>
-      <div class="banner">
-        <img src="/icons/WifiMonitorIcon.png" alt="" />
-        <p style="text-align: center">A Wi-Fi activity monitor</p>
-        <img src="/icons/WifiMonitorIcon.png" alt="" />
-      </div>
-      <div class="WifiMonitor">
-        <button class="button" type="button">
-          <a href="WifiMonitor.html">Click For More Info!</a>
-        </button>
-      </div>
-      <div class="banner">
-        <img src="/icons/MoonOrbitIcon.png" alt="" />
-        <p style="text-align: center">Moon Orbital Constellation</p>
-        <img src="/icons/MoonOrbitIcon.png" alt="" />
-      </div>
-      <div class="MoonOrbit">
-        <button class="button" type="button">
-          <a href="MoonConstellation.html">Click For More Info!</a>
-        </button>
-      </div>
+    <div class="banner">
+      <img src="/icons/SoundFollowerIcon.png" alt="" />
+      <p style="text-align: center">A sound following robot</p>
+      <img src="/icons/SoundFollowerIcon.png" alt="" />
     </div>
+    <div class="SoundFollow">
+      <a href="SoundFollowingRobot.html" style="margin: auto auto">
+        <button class="button" type="button">Click For More Info!</button>
+      </a>
+    </div>
+    <div class="banner">
+      <img src="/icons/WifiMonitorIcon.png" alt="" />
+      <p style="text-align: center">A Wi-Fi activity monitor</p>
+      <img src="/icons/WifiMonitorIcon.png" alt="" />
+    </div>
+    <div class="WifiMonitor">
+      <a href="WifiMonitor.html" style="margin: auto auto">
+        <button class="button" type="button">Click For More Info!</button>
+      </a>
+    </div>
+    <div class="banner">
+      <img src="/icons/MoonOrbitIcon.png" alt="" />
+      <p style="text-align: center">Moon Orbital Constellation</p>
+      <img src="/icons/MoonOrbitIcon.png" alt="" />
+    </div>
+    <div class="MoonOrbit">
+      <a href="MoonConstellation.html" style="margin: auto auto">
+        <button class="button" type="button">Click For More Info!</button>
+      </a>
+    </div>
+    <footer>
+      <a href="#top">
+        <button type="button" class="bottombutton">Up To Top</button>
+      </a>
+      <h1>Copyright &copy Ahren McTaggart 2020</h1>
+    </footer>
   </body>
 </html>
