--- a/SoundFollowingRobot.html
+++ b/SoundFollowingRobot.html
@@ -4,6 +4,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sound Following Robot</title>
+    <link rel="stylesheet" href="/cssfiles/Miotag.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <a href="/ProjectTree.html"
+        ><button type="button">
+          <img src="/icons/BackIcon.png" alt="" /></button
+      ></a>
+      <h1>Sound Following Robot</h1>
+      <img src="/icons/YouTubeIcon.png" alt="" style="height: 30%" />
+    </header>
+    <div class="container">
+      <div class="section">
+        <img src="/images/SoundFollower/SF1.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+      </div>
+      <div class="section">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+        <img src="/images/SoundFollower/SF2.JPG" alt="" />
+      </div>
+      <div class="section">
+        <img src="/images/SoundFollower/SF3.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+      </div>
+      <div class="section">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+        <img src="/images/SoundFollower/SF4.jpg" alt="" />
+      </div>
+    </div>
+    <div class="skills">
+      <div>
+        <button type="button" id="softSkill" class="accordion">
+          Soft Skills Used
+        </button>
+        <ul class="accordionContent">
+          <li>Communication</li>
+          <li>Teamwork</li>
+          <li>Time Management</li>
+          <li>Leadership</li>
+          <li>Problem Solving</li>
+          <li>Dependability</li>
+          <li>Flexibility</li>
+          <li>Creativity</li>
+        </ul>
+      </div>
+      <div>
+        <button type="button" id="technicalSkill" class="accordion">
+          Technical Skills Used
+        </button>
+        <ul class="accordionContent">
+          <li>Python Programming</li>
+          <li>Sensor Integration</li>
+          <li>Signal Processing</li>
+          <li>Report Writing</li>
+          <li>Management</li>
+          <li>Data Analysis</li>
+        </ul>
+      </div>
+    </div>
+
+    <footer>Copyright &copy Ahren McTaggart 2020</footer>
+
+    <script src="js/Miotag.js"></script>
+  </body>
 </html>
