--- a/HomePage.html
+++ b/HomePage.html
@@ -7,36 +7,16 @@
     <link rel="stylesheet" href="./cssfiles/HomePage.css" />
   </head>
   <body>
-    <div class="header">
-      <img src="./images/Profile.jpeg" alt="" id="top" />
-      Ahren McTaggart's Portfolio
-      <div class="subheader">
-        <img
-          src="./icons/FacebookIcon.png"
-          alt=""
-          style="padding-right: 10px"
-        /><img src="./icons/LinkedInIcon.png" alt="" />
-      </div>
-    </div>
-    <div>
-      <p
-        style="
-          text-align: center;
-          font-size: 20px;
-          font-family: 'Lato';
-          background: radial-gradient(rgb(139, 139, 139), rgb(83, 83, 83));
-          margin: 30px 30px;
-          padding: 30px 30px;
-          border-radius: 10px;
-          letter-spacing: 0.05em;
-        "
-      >
-        Thank you for taking the time to visit my website! I coded it from
-        scratch (no template tools), in order to showcase my past work and
-        creativity in a portfolio. I hope you are able to find out more about me
-        and understand my skillset, as well as finding out what I can bring to
-        your company.
-      </p>
+    <header>
+      <img src="/images/Profile/Profile.jpeg" alt="" />
+      <h1>Ahren McTaggart's Portfolio</h1>
+      <img src="/icons/LinkedInIcon.png" alt="" />
+    </header>
+    <div class="Intro">
+      Thank you for taking the time to visit my website! I coded it from scratch
+      (no template tools), in order to showcase my past work and creativity in a
+      portfolio. I hope you are able to find out more about me and understand my
+      skillset, as well as finding out what I can bring to your company.
     </div>
 
     <div class="subsection">
@@ -73,29 +53,11 @@
       </div>
       <div class="rightcontact"></div>
     </div>
-    <div class="footer">
-      <a href="#top" style="margin: auto auto">
-        <button
-          type="button"
-          style="
-            font-family: 'Lato';
-            border-radius: 10px;
-            height: 60px;
-            width: 150px;
-            font-size: 15px;
-            cursor: pointer;
-            background: radial-gradient(rgb(160, 160, 160), rgb(100, 100, 100));
-            border-color: rgb(80, 80, 80);
-            font-weight: 800;
-          "
-        >
-          Back To Top
-        </button>
+    <footer>
+      <a href="#" style="margin: auto auto">
+        <button type="button">Up To Top</button>
       </a>
-      <div></div>
-      <div style="color: white; margin: auto auto; font-family: 'Lato'">
-        Copyright &copy; Ahren McTaggart 2020
-      </div>
-    </div>
+      <h1>Copyright &copy; Ahren McTaggart 2020</h1>
+    </footer>
   </body>
 </html>
