--- a/MioTag.html
+++ b/MioTag.html
@@ -4,6 +4,118 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MioTag: Stroke Rehabilitation</title>
+    <link rel="stylesheet" href="/cssfiles/Miotag.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="/ProjectTree.html"
+        ><button type="button">
+          <img src="/icons/BackIcon.png" alt="" /></button
+      ></a>
+      <h1>MioTag: Stroke Rehabilitation</h1>
+      <img src="/icons/YouTubeIcon.png" alt="" style="height: 30%" />
+    </header>
+    <div class="container">
+      <div class="section">
+        <img src="/images/MioTag/Mio3.png" alt="" />
+        <p>
+          This project served as my Master's thesis at the University of
+          Strathclyde. It was completed alongside my teammates, Filip Lejhanec,
+          Wojtek Cichoradzki, Fraser Martin and Leo McKeever.
+          <br />
+          <br />
+          The aim of the project was to develop a smart glove which connects
+          with a mobile device to creater an interactive platform to assist with
+          the rehabilitation of nerve damage victims, primarily stroke patients.
+        </p>
+      </div>
+      <div class="section">
+        <p>
+          I developed the concept for the platform in late 2018, and spent my
+          dissertation (Wi-Fi Activity Monitor) building the foundations, before
+          forming a strong team and pitching the idea to the University
+          department for my Master's project. I was the project manager and lead
+          hardware developer of the project, and found the development process
+          to be very fulfilling and creative.
+        </p>
+        <img src="/images/MioTag/Mio1.png" alt="" />
+      </div>
+      <div class="section">
+        <img src="/images/MioTag/Mio2.png" alt="" />
+        <p>
+          After noticing the difficulty surrounding stroke rehabilitation, such
+          as long wait times, few available appointments, and a lack of
+          compelling rehabilitation exercises, I devised the platform to provide
+          a much cheaper and more engaging experience. The user can complete
+          exercises and participate in games while wearing the glove, and then
+          log these activities to their account to be viewed by themselves (to
+          improve motivation) and their clinicians (to track progress). The app
+          is also social, with friends and family able to connect with each
+          other to provide a community of support.
+        </p>
+      </div>
+      <div class="section">
+        <p>
+          As the project lead, I was responsible for guiding the outcome in the
+          right direction, using my initial vision of what the platform could
+          become as inspiration. I was solely responsible for the design and
+          manufacture of the glove frame, which housed the electronics. This
+          involved using CAD extensively to develop not only the frame, but
+          inverse of the frame to make the mould for the rubber to be poured in.
+          I was also largely involved with the electronic development, as I
+          selected all the components and built the PCB on EasyEDA in
+          conjunction with Leo McKeever and Filip Lejhanec.
+        </p>
+        <img src="/images/MioTag/Mio4.png" alt="" />
+      </div>
+      <div class="section">
+        <img src="/images/MioTag/Mio6.png" alt="" />
+        <p>
+          The final product was of a very high standard and conformed to the
+          requirements set out initially, even in the midst of a global
+          pandemic. The prototype was relatively cheap at £150, lightweight and
+          easy to use. The elastic rubber that was used in the frame allowed for
+          the glove to be universally sized, meaning it was as inclusive as
+          possible. The final product offered one touch activation, wireless
+          charging and a well designed mobile app. To get a full overview,
+          please follow the YouTube link in the header of this page.
+        </p>
+      </div>
+    </div>
+    <div class="skills">
+      <div>
+        <button type="button" id="softSkill" class="accordion">
+          Soft Skills Used
+        </button>
+        <ul class="accordionContent">
+          <li>Communication</li>
+          <li>Teamwork</li>
+          <li>Time Management</li>
+          <li>Leadership</li>
+          <li>Problem Solving</li>
+          <li>Dependability</li>
+          <li>Flexibility</li>
+          <li>Creativity</li>
+        </ul>
+      </div>
+      <div>
+        <button type="button" id="technicalSkill" class="accordion">
+          Technical Skills Used
+        </button>
+        <ul class="accordionContent">
+          <li>CAD (SolidWorks)</li>
+          <li>PCB Design</li>
+          <li>Report Writing</li>
+          <li>Manufacturing Frame</li>
+          <li>C Programming</li>
+          <li>Electronic Design</li>
+          <li>Version Control</li>
+        </ul>
+      </div>
+    </div>
+
+    <footer>Copyright &copy Ahren McTaggart 2020</footer>
+
+    <script src="js/Miotag.js"></script>
+  </body>
 </html>
