--- a/MoonConstellation.html
+++ b/MoonConstellation.html
@@ -3,7 +3,94 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moon Constellation</title>
+    <title>Moon Orbital Constellation</title>
+    <link rel="stylesheet" href="/cssfiles/Miotag.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <a href="/ProjectTree.html"
+        ><button type="button">
+          <img src="/icons/BackIcon.png" alt="" /></button
+      ></a>
+      <h1>Moon Orbital Constellation</h1>
+      <img src="/icons/YouTubeIcon.png" alt="" style="height: 30%" />
+    </header>
+    <div class="container">
+      <div class="section">
+        <img src="/images/MoonOrbital/MO1.gif" alt="" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+      </div>
+      <div class="section">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+        <img src="/images/MoonOrbital/MO2.gif" alt="" />
+      </div>
+      <div class="section">
+        <img src="/images/MoonOrbital/MO4.gif" alt="" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+      </div>
+      <div class="section">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          laudantium molestiae perspiciatis corrupti officiis veniam vitae
+          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
+          aliquam expedita minus quasi adipisci velit voluptate incidunt in
+          pariatur amet, animi beatae debitis.
+        </p>
+        <img src="/images/MoonOrbital/MO3.jpg" alt="" />
+      </div>
+    </div>
+    <div class="skills">
+      <div>
+        <button type="button" id="softSkill" class="accordion">
+          Soft Skills Used
+        </button>
+        <ul class="accordionContent">
+          <li>Communication</li>
+          <li>Teamwork</li>
+          <li>Self Motivation</li>
+          <li>Time Management</li>
+          <li>Problem Solving</li>
+          <li>Presentation</li>
+          <li>Flexibility</li>
+          <li>Creativity</li>
+        </ul>
+      </div>
+      <div>
+        <button type="button" id="technicalSkill" class="accordion">
+          Technical Skills Used
+        </button>
+        <ul class="accordionContent">
+          <li>MATLAB</li>
+          <li>Version Control</li>
+          <li>Powerpoint</li>
+          <li>Orbital Mechanics</li>
+          <li>Data Analysis</li>
+          <li>Mathematical Modelling</li>
+        </ul>
+      </div>
+    </div>
+
+    <footer>Copyright &copy Ahren McTaggart 2020</footer>
+
+    <script src="js/Miotag.js"></script>
+  </body>
 </html>
