Added skills page and reformatted

--- a/HomePage.html
+++ b/HomePage.html
@@ -31,9 +31,11 @@
     <div class="subsection">
       <div class="leftskill"></div>
       <div class="centre">
-        <button type="button" class="button">
-          Take A Look At My Skillset!
-        </button>
+        <a href="/SkillSet.html" style="margin: auto auto">
+          <button type="button" class="button">
+            Take A Look At My Skillset!
+          </button>
+        </a>
       </div>
       <div class="rightskill"></div>
     </div>
