--- a/MoonConstellation.html
+++ b/MoonConstellation.html
@@ -20,40 +20,56 @@
       <div class="section">
         <img src="/images/MoonOrbital/MO1.gif" alt="" />
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          The task assigned to each team was to devise a satellite constellation
+          to be set up around the moon that would provide total coverage of the
+          surface by at least 4 satellites at once. Each team was given creative
+          freedom to model and simulate results, so our team selected MATLAB to
+          verify and validate that our constellation fulfilled the main
+          objectives.
         </p>
       </div>
       <div class="section">
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          There were many requirements to conform to, including the solar
+          eclipse period and the launch windows, but my main task was to
+          simulate the ground coverage to ensure our constellation operated
+          correctly. The code was developed from scratch using the orbital
+          mechanics equations derived throughout the class, and gives a visual
+          animation of the satellites orbiting about the moon. The moon surface
+          colour changes (shown in animation above) reflect how many satellites
+          can be seen by that point on the surface at any given time (Purple =
+          6, Light Blue = 5, Red = 4, Black = less than 4). The code could be
+          easily modified to change the semi major axis, eccentricity,
+          prograde/retrograde, no. satellites on each orbit, and all angles of
+          orbit (inclination etc.).
         </p>
-        <img src="/images/MoonOrbital/MO2.gif" alt="" />
-      </div>
-      <div class="section">
         <img src="/images/MoonOrbital/MO4.gif" alt="" />
+      </div>
+      <div class="section">
+        <img src="/images/MoonOrbital/MO2.gif" alt="" />
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          Two other aspects I was responsible included modelling the
+          pertubations into the ground coverage (animation exaggerates
+          pertubations to show them more clearly), and animating the orbit
+          transfer of the satellite from the carrier to the constellation. This
+          can be shown in the above and left animations respectively. The
+          success of my tasks were very reliant on strong communication between
+          other team members. These results were presented, to back up our
+          design decisions, and we were delighted to have defended our
+          constellation succesfully, without any changes needed.
         </p>
       </div>
       <div class="section">
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          The graphs opposite illustate the total ground coverage by a minimum
+          of 4, 5 and 6 satellites. The left graph is when 3 satellites are
+          present on each orbit, and the right is for 4 on each orbit. The left
+          graph takes several dips in 100% coverage by 4 satellites, hence it
+          fails the objective and reinforces our decision for 4 satellites per
+          orbit. Since the orbit is periodic, there will always be coverage by 4
+          satellites across the moon with this arrangement. All code was managed
+          using Git and GitHub, with my teammates Duncan Wither and Laurence
+          Donkers.
         </p>
         <img src="/images/MoonOrbital/MO3.jpg" alt="" />
       </div>
