Added contact page and reformatted

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,9 @@
     <header>
       <img src="/images/Profile/Profile.jpeg" alt="" />
       <h1>Ahren McTaggart's Portfolio</h1>
-      <img src="/icons/LinkedInIcon.png" alt="" />
+      <a href="https://www.linkedin.com/in/ahren-mctaggart" target="_blank">
+        <img src="/icons/LinkedInIcon.png" alt="" />
+      </a>
     </header>
     <div class="Intro">
       Thank you for taking the time to visit my website! I coded it from scratch
@@ -51,12 +53,14 @@
     <div class="subsection">
       <div class="leftcontact"></div>
       <div class="centre">
-        <button type="button" class="button">Contact Me!</button>
+        <a href="/Contact.html" style="margin: auto auto">
+          <button type="button" class="button">Contact Me!</button>
+        </a>
       </div>
       <div class="rightcontact"></div>
     </div>
     <footer>
-      <a href="#" style="margin: auto auto">
+      <a href="#">
         <button type="button">Up To Top</button>
       </a>
       <h1>Copyright &copy; Ahren McTaggart 2020</h1>
