--- a/ProjectTree.html
+++ b/ProjectTree.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/HomePage.html"
+      <a href="/Index.html"
         ><button type="button">
           <img src="/icons/BackIcon.png" alt="" /></button
       ></a>
@@ -24,7 +24,8 @@
       <p style="text-align: center">A stroke rehabilitation platform: MioTag</p>
       <img src="/icons/MioTagIcon.png" alt="" />
     </div>
-    <div class="Miotag">
+    <div class="layout">
+      <img src="/gifs/MioTag.gif" alt="" />
       <a href="MioTag.html" style="margin: auto auto">
         <button class="button" type="button">Click For More Info!</button>
       </a>
@@ -34,7 +35,8 @@
       <p style="text-align: center">A sound following robot</p>
       <img src="/icons/SoundFollowerIcon.png" alt="" />
     </div>
-    <div class="SoundFollow">
+    <div class="layout">
+      <img src="/gifs/SoundFollower.gif" alt="" />
       <a href="SoundFollowingRobot.html" style="margin: auto auto">
         <button class="button" type="button">Click For More Info!</button>
       </a>
@@ -44,7 +46,8 @@
       <p style="text-align: center">A Wi-Fi activity monitor</p>
       <img src="/icons/WifiMonitorIcon.png" alt="" />
     </div>
-    <div class="WifiMonitor">
+    <div class="layout">
+      <img src="/gifs/WifiMonitor.gif" alt="" />
       <a href="WifiMonitor.html" style="margin: auto auto">
         <button class="button" type="button">Click For More Info!</button>
       </a>
@@ -54,7 +57,8 @@
       <p style="text-align: center">Moon Orbital Constellation</p>
       <img src="/icons/MoonOrbitIcon.png" alt="" />
     </div>
-    <div class="MoonOrbit">
+    <div class="layout">
+      <img src="/gifs/MoonOrbit.gif" alt="" />
       <a href="MoonConstellation.html" style="margin: auto auto">
         <button class="button" type="button">Click For More Info!</button>
       </a>
