--- a/SkillSet.html
+++ b/SkillSet.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/HomePage.html"
+      <a href="/Index.html"
         ><button type="button">
           <img src="/icons/BackIcon.png" alt="" /></button
       ></a>
@@ -32,8 +32,7 @@
         <img src="/Skills/TeamWork.png" alt="" />
         <h1>Team Work</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          Having been a part of teams in swimming, work, University and Space School, I have always engaged well with everyone and been an adaptable member.
         </p>
       </div>
     </div>
@@ -42,15 +41,14 @@
         <img src="/Skills/Organisation.png" alt="" />
         <h1>Organisation</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I have been part of fast paced companies and projects, requiring strong organisation skills to perform under pressure.
         </p>
       </div>
       <div>
         <img src="/Skills/Creativity.png" alt="" />
         <h1>Creativity</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, 
           sapiente?
         </p>
       </div>
@@ -88,54 +86,36 @@
       <div>
         <img src="/Skills/C.png" alt="" />
         <h1>C Programming</h1>
-        <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
-        </p>
+        <img src="/Skills/Stars/FourOfFiveStars.png" alt="" class="starrating">
       </div>
       <div>
         <img src="/Skills/Python.png" alt="" />
         <h1>Python</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
-        </p>
+        <img src="/Skills/Stars/FourOfFiveStars.png" alt="" class="starrating">
       </div>
     </div>
     <div>
       <div>
         <img src="/Skills/MATLAB.png" alt="" />
         <h1>MATLAB</h1>
-        <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
-        </p>
+        <img src="/Skills/Stars/FourOfFiveStars.png" alt="" class="starrating">
       </div>
       <div>
         <img src="/Skills/PHP.png" alt="" />
         <h1>PHP</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
-        </p>
+        <img src="/Skills/Stars/TwoOfFiveStars.png" alt="" class="starrating">
       </div>
     </div>
     <div>
       <div>
         <img src="/Skills/HTML.png" alt="" />
         <h1>HTML</h1>
-        <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
-        </p>
+        <img src="/Skills/Stars/ThreeOfFiveStars.png" alt="" class="starrating">
       </div>
       <div>
         <img src="/Skills/CSS.png" alt="" />
         <h1>CSS</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
-        </p>
+        <img src="/Skills/Stars/ThreeOfFiveStars.png" alt="" class="starrating">
       </div>
     </div>
     <div>
@@ -238,6 +218,16 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
           sapiente?
+        </p>
+      </div>
+    </div>
+    <div id="single">
+      <div>
+        <img src="/Skills/DeepLearning.png" alt="" />
+        <h1>Deep Learning/Machine Learning</h1>
+        <p>
+          I believe no issue is too difficult to tackle, having used this skill
+          throughout project work and employment
         </p>
       </div>
     </div>
