--- a/SoundFollowingRobot.html
+++ b/SoundFollowingRobot.html
@@ -20,22 +20,24 @@
       <div class="section">
         <img src="/images/SoundFollower/SF1.jpg" alt="" />
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          This is a team project I completed in my third year of University. The
+          goal was to develop a robot that was capable of following noise of a
+          specific frequency. The robot was to be intelligent enough to
+          disregard frequencies that it was not tuned to find, and also have
+          obstacle avoidance capabilities. The project was very open creatively,
+          and allowed us to put our own spin on the design and functionality of
+          the robot.
         </p>
       </div>
       <div class="section">
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
-        </p>
         <img src="/images/SoundFollower/SF2.JPG" alt="" />
+        <p>
+          A Raspberry Pi 3 was selected to process the sound and control the
+          motors. In the Raspberry Pi, the Idle IDE was used, hence Python was
+          the programming language running in the robot. A mini USB microphone,
+          Ultrasound sensor and L293D motor controller were integrated to make
+          the robot fully operational.
+        </p>
       </div>
       <div class="section">
         <img src="/images/SoundFollower/SF3.jpg" alt="" />
@@ -48,6 +50,7 @@
         </p>
       </div>
       <div class="section">
+        <img src="/images/SoundFollower/SF4.jpg" alt="" />
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
           laudantium molestiae perspiciatis corrupti officiis veniam vitae
@@ -55,7 +58,6 @@
           aliquam expedita minus quasi adipisci velit voluptate incidunt in
           pariatur amet, animi beatae debitis.
         </p>
-        <img src="/images/SoundFollower/SF4.jpg" alt="" />
       </div>
     </div>
     <div class="skills">
