Added quals pages and made formatting changes

--- a/Index.html
+++ b/Index.html
@@ -44,9 +44,11 @@
     <div class="subsection">
       <div class="leftcertification"></div>
       <div class="centre">
-        <button type="button" class="button">
-          Find Out my qualifications!
-        </button>
+        <a href="/Experience.html" style="margin: auto auto">
+          <button type="button" class="button">
+            Qualification, Experience, Courses
+          </button>
+        </a>
       </div>
       <div class="rightcertification"></div>
     </div>
