--- a/SkillSet.html
+++ b/SkillSet.html
@@ -25,7 +25,7 @@
         <h1>Problem Solving</h1>
         <p>
           I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment.
+          throughout project work and employment. I love a challenge.
         </p>
       </div>
       <div>
@@ -48,8 +48,7 @@
         <img src="/Skills/Creativity.png" alt="" />
         <h1>Creativity</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, 
-          sapiente?
+          I take great pride in how I design and present a project, as I believe taking bold creative decisions improves projects dramatically.
         </p>
       </div>
     </div>
@@ -58,16 +57,14 @@
         <img src="/Skills/Communication.png" alt="" />
         <h1>Communication</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I can work with all different types of personality, and thoroughly enjoy engaging with new people.
         </p>
       </div>
       <div>
         <img src="/Skills/Innovation.png" alt="" />
         <h1>Innovation</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          Optimising and thinking outside the box are key considerations whenever I have tasks to complete.
         </p>
       </div>
     </div>
@@ -76,34 +73,41 @@
         <img src="/Skills/TimeManagement.png" alt="" />
         <h1>Time Management</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I am dedicated and motivated to sticking to a schedule, and make sure my tasks are completed reliably, on time and to a high standard.
         </p>
       </div>
     </div>
-    <div id="seperator"><h1>Programming Languages</h1></div>
+    <div id="seperator"><h1>Programming Languages <br><span>* I thoroughly enjoy learning new languages and I pick up programming skills quickly *</span></h1></div>
     <div>
       <div>
         <img src="/Skills/C.png" alt="" />
         <h1>C Programming</h1>
-        <img src="/Skills/Stars/FourOfFiveStars.png" alt="" class="starrating">
+        <p>
+          I have used C throughout University, in the MSP430 range, OMAP-L138 Kit, and Arduinos. I have also taken several Udemy courses in my own time to enhance my knowledge
+        </p>
       </div>
       <div>
         <img src="/Skills/Python.png" alt="" />
         <h1>Python</h1>
-        <img src="/Skills/Stars/FourOfFiveStars.png" alt="" class="starrating">
+        <p>
+          I have used this in my dissertation, and my sound following robot project, where I led the code development. I have also been a part of a Python course at University. 
+        </p>
       </div>
     </div>
     <div>
       <div>
         <img src="/Skills/MATLAB.png" alt="" />
         <h1>MATLAB</h1>
-        <img src="/Skills/Stars/FourOfFiveStars.png" alt="" class="starrating">
+        <p>
+         I used this language extensively throughout University for advanced robotics, orbital constellation simulation, image processing, deep neural networks etc.
+        </p>
       </div>
       <div>
         <img src="/Skills/PHP.png" alt="" />
         <h1>PHP</h1>
-        <img src="/Skills/Stars/TwoOfFiveStars.png" alt="" class="starrating">
+        <p>
+          I used this to give server functionality to my Wi-Fi activity monitor, which accessed an SQL database to input and retrieve information about users for my application.
+        </p>
       </div>
     </div>
     <div>
