--- a/SoundFollowingRobot.html
+++ b/SoundFollowingRobot.html
@@ -42,21 +42,25 @@
       <div class="section">
         <img src="/images/SoundFollower/SF3.jpg" alt="" />
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          My role in the team was project manager and programming lead. I was
+          responsible for the building, integration and testing of components to
+          produce the final result. It was exciting to have practical
+          applications of skills developed throughout University, and my ability
+          in Python improved substantially, as well as my interpersonal skills
+          in a team dynamic.
         </p>
       </div>
       <div class="section">
         <img src="/images/SoundFollower/SF4.jpg" alt="" />
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          The result of the project was a fully autonomous robot capable of
+          being tuned to follow any frequency between 100Hz and 20,000Hz, and
+          with obstacle avoidance algorithms built in. A creative twist on
+          similar projects was the small size of the robot, allowing it more
+          mobility and less power consumption. The demonstration and
+          presentation went excellently, with the robot conforming perfectly to
+          the initial brief and requirements. The team received a high mark for
+          this work.
         </p>
       </div>
     </div>
